--- a/web/modules/custom/ai_screening_project_track/ai_screening_project_track.services.yml
+++ b/web/modules/custom/ai_screening_project_track/ai_screening_project_track.services.yml
@@ -7,5 +7,10 @@ services:
     autowire: true
     arguments:
       $logger: '@logger.channel.ai_screening_project_track'
+
+  Drupal\ai_screening_project_track\Helper\ProjectTrackToolHelper:
+    autowire: true
+    arguments:
+      $logger: '@logger.channel.ai_screening_project_track'
     tags:
       - { name: event_subscriber }
