--- a/web/modules/custom/ai_screening_project_track/ai_screening_project_track.services.yml
+++ b/web/modules/custom/ai_screening_project_track/ai_screening_project_track.services.yml
@@ -7,6 +7,8 @@ services:
     autowire: true
     arguments:
       $logger: '@logger.channel.ai_screening_project_track'
+    tags:
+      - { name: event_subscriber }
 
   Drupal\ai_screening_project_track\Helper\ProjectTrackToolHelper:
     autowire: true
