--- a/web/modules/custom/ai_screening_project/ai_screening_project.info.yml
+++ b/web/modules/custom/ai_screening_project/ai_screening_project.info.yml
@@ -6,4 +6,5 @@ core_version_requirement: "^11"
 dependencies:
   - 'drupal:node'
   - 'core_event_dispatcher:core_event_dispatcher'
+  - 'core_event_dispatcher:preprocess_event_dispatcher'
   - 'ai_screening_project_track:ai_screening_project_track'
