Updated project template

--- a/config/sync/core.entity_view_display.node.project.default.yml
+++ b/config/sync/core.entity_view_display.node.project.default.yml
@@ -16,23 +16,19 @@ mode: default
 content:
   field_department:
     type: entity_reference_label
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
-    weight: 2
+    weight: 1
     region: content
   field_description:
     type: text_default
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    weight: 1
-    region: content
-  links:
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 0
     region: content
 hidden:
   langcode: true
+  links: true
