2903: add menu in view instead of as content

--- a/config/sync/views.view.projects.yml
+++ b/config/sync/views.view.projects.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_description
     - node.type.project
+    - system.menu.main
   module:
     - node
     - text
@@ -328,7 +329,7 @@ display:
       display_extenders: {  }
       path: projects
       menu:
-        type: none
+        type: normal
         title: Projekter
         description: ''
         weight: 0
