2903: removed viewsexposedform twig and added css/css class in view

--- a/config/sync/views.view.projects.yml
+++ b/config/sync/views.view.projects.yml
@@ -451,6 +451,7 @@ display:
           replica: false
           query_tags: {  }
       relationships: {  }
+      css_class: projects-view
       header: {  }
       footer: {  }
       display_extenders: {  }
