--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -50,7 +50,7 @@ tasks:
     desc: "Build a new site"
     cmds:
       - task drush -- site:install minimal -y
-      - task drush -- user:role:add 'administrator' admin
+      - task set-user-roles
 
   build-site:existing-conf:
     desc: "Build the site using existing configuration from the config/sync folder"
@@ -58,7 +58,7 @@ tasks:
       - task compose -- up --detach
       - task composer -- install
       - task drush -- site-install --existing-config --yes
-      - task drush -- user:role:add 'administrator' admin
+      - task set-user-roles
 
   site-url:
     desc: "Show site URL"
@@ -80,6 +80,7 @@ tasks:
       - task drush -- cache:rebuild
       - task drush -- browse --no-browser
       - task drush -- user:login
+      - task set-user-roles
     silent: true
 
   site-install-new:
@@ -133,4 +134,10 @@ tasks:
     desc: "Run custom module unit tests. Any additional arguments are passed to `phpunit`, e.g. `task test-module-test -- --debug`"
     cmds:
       - task compose -- exec phpfpm bash -c 'cd web && ../vendor/bin/phpunit --configuration ../phpunit.xml modules/custom {{.CLI_ARGS}}'
+    silent: true
+
+  set-user-roles:
+    desc: "Set some user's roles"
+    cmds:
+      - task drush -- user:role:add 'administrator' admin
     silent: true
