--- a/web/modules/custom/ai_screening_fixtures_base/ai_screening_fixtures_base.info.yml
+++ b/web/modules/custom/ai_screening_fixtures_base/ai_screening_fixtures_base.info.yml
@@ -5,3 +5,4 @@ core_version_requirement: ^11
 package: ITK
 dependencies:
   - content_fixtures:content_fixtures
+  - ai_screening_project:ai_screening_project
