--- a/web/modules/custom/ai_screening/ai_screening.services.yml
+++ b/web/modules/custom/ai_screening/ai_screening.services.yml
@@ -16,3 +16,10 @@ services:
       $logger: '@logger.channel.ai_screening'
     tags:
       - { name: event_subscriber }
+
+  Drupal\ai_screening\Helper\BlockHelper:
+    autowire: true
+    arguments:
+      $logger: '@logger.channel.ai_screening'
+    tags:
+      - { name: event_subscriber }
