--- a/config/sync/core.entity_view_display.node.project.default.yml
+++ b/config/sync/core.entity_view_display.node.project.default.yml
@@ -5,8 +5,10 @@ dependencies:
   config:
     - field.field.node.project.field_department
     - field.field.node.project.field_description
+    - field.field.node.project.field_status
     - node.type.project
   module:
+    - options
     - text
     - user
 id: node.project.default
@@ -18,7 +20,7 @@ content:
     type: entity_reference_label
     label: hidden
     settings:
-      link: true
+      link: false
     third_party_settings: {  }
     weight: 1
     region: content
@@ -28,6 +30,13 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_status:
+    type: list_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 2
     region: content
 hidden:
   langcode: true
