--- a/config/sync/views.view.frontpage.yml
+++ b/config/sync/views.view.frontpage.yml
@@ -1,6 +1,6 @@
 uuid: 17d78bdb-a1e7-4468-9a29-b87e878d90b4
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.node.rss
