--- a/web/modules/custom/ai_screening/ai_screening.info.yml
+++ b/web/modules/custom/ai_screening/ai_screening.info.yml
@@ -7,3 +7,4 @@ dependencies:
   - drupal:user
   - openid_connect:openid_connect
   - custom_event_dispatcher:custom_event_dispatcher
+  - ai_screening_project:ai_screening_project
