Moved block to ai_screening_project

--- a/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
+++ b/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
@@ -14,3 +14,10 @@ services:
     autowire: true
     tags:
       - { name: twig.extension }
+
+  Drupal\ai_screening_project\Helper\BlockHelper:
+    autowire: true
+    arguments:
+      $logger: '@logger.channel.ai_screening'
+    tags:
+      - { name: event_subscriber }
