Changed twig extension

--- a/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
+++ b/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
@@ -10,7 +10,7 @@ services:
     tags:
       - { name: event_subscriber }
 
-  Drupal\ai_screening_project\Template\ProjectStatusEvaluationTwigExtension:
+  Drupal\ai_screening_project\Template\ProjectTwigExtension:
     autowire: true
     tags:
       - { name: twig.extension }
