--- a/config/sync/core.entity_form_display.node.project.default.yml
+++ b/config/sync/core.entity_form_display.node.project.default.yml
@@ -7,7 +7,28 @@ dependencies:
     - field.field.node.project.field_description
     - node.type.project
   module:
+    - field_group
     - text
+third_party_settings:
+  field_group:
+    group_project_information:
+      children:
+        - title
+        - field_description
+        - field_department
+        - status
+      label: Projektinformation
+      region: content
+      parent_name: ''
+      weight: 0
+      format_type: fieldset
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        label_as_html: false
+        description: ''
+        required_fields: true
 id: node.project.default
 targetEntityType: node
 bundle: project
@@ -15,7 +36,7 @@ mode: default
 content:
   field_department:
     type: options_buttons
-    weight: 1
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -29,14 +50,14 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 3
+    weight: 4
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 0
+    weight: 1
     region: content
     settings:
       size: 60
