--- a/config/sync/core.entity_form_display.node.project.default.yml
+++ b/config/sync/core.entity_form_display.node.project.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.project.field_description
     - node.type.project
   module:
+    - allowed_formats
     - field_group
     - text
 third_party_settings:
@@ -47,7 +48,10 @@ content:
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '0'
   status:
     type: boolean_checkbox
     weight: 4
