--- a/config/sync/core.entity_form_display.node.project.default.yml
+++ b/config/sync/core.entity_form_display.node.project.default.yml
@@ -17,7 +17,6 @@ third_party_settings:
         - title
         - field_description
         - field_department
-        - status
       label: Projektinformation
       region: content
       parent_name: ''
@@ -52,13 +51,6 @@ content:
       allowed_formats:
         hide_help: '1'
         hide_guidelines: '1'
-  status:
-    type: boolean_checkbox
-    weight: 4
-    region: content
-    settings:
-      display_label: true
-    third_party_settings: {  }
   title:
     type: string_textfield
     weight: 1
@@ -71,5 +63,6 @@ hidden:
   created: true
   langcode: true
   promote: true
+  status: true
   sticky: true
   uid: true
