--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -36,7 +36,8 @@ jobs:
           # Add some local settings.
           cat > web/sites/default/settings.local.php <<'EOF'
           <?php
-          $settings['hash_salt'] = '${{ github.head_ref }}';
+          // https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/accessing-contextual-information-about-workflow-runs#github-context
+          $settings['hash_salt'] = '${{ github.job }}';
 
           $settings['trusted_host_patterns'][] = '^nginx$';
 
