2991: Added breadcrumb builder

--- a/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
+++ b/web/modules/custom/ai_screening_project/ai_screening_project.services.yml
@@ -19,3 +19,8 @@ services:
     autowire: true
     tags:
       - { name: event_subscriber }
+
+  Drupal\ai_screening_project\BreadcrumbBuilder:
+    autowire: true
+    tags:
+      - { name: breadcrumb_builder, priority: 1010 }
