--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -17,7 +17,7 @@ mode: default
 content:
   field_department:
     type: entity_reference_label
-    label: hidden
+    label: above
     settings:
       link: false
     third_party_settings: {  }
