3002: Updated Markdown linting

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Coding standards
         run: |
-          docker run --rm --volume "$PWD:/md" peterdavehello/markdownlint markdownlint $(git ls-files *.md)
+          docker run --rm --volume "$PWD:/md" peterdavehello/markdownlint markdownlint '**/*.md'
 
   composer-normalize:
     name: composer-normalize
