--- a/config/sync/user.role.administrator.yml
+++ b/config/sync/user.role.administrator.yml
@@ -6,6 +6,7 @@ dependencies:
     - taxonomy.vocabulary.department
     - taxonomy.vocabulary.project_track_type
   module:
+    - navigation
     - system
     - taxonomy
     - webform
@@ -15,14 +16,18 @@ weight: 3
 is_admin: null
 permissions:
   - 'access administration pages'
+  - 'access navigation'
   - 'access site in maintenance mode'
   - 'access site reports'
-  - 'administer site configuration'
+  - 'access taxonomy overview'
+  - 'access webform overview'
   - 'create terms in department'
   - 'create terms in project_track_type'
   - 'create webform'
   - 'delete terms in department'
   - 'delete terms in project_track_type'
   - 'edit any webform'
+  - 'edit terms in department'
+  - 'edit terms in project_track_type'
   - 'view the administration theme'
   - 'view vocabulary labels'
