--- a/config/sync/taxonomy.vocabulary.project_track_type.yml
+++ b/config/sync/taxonomy.vocabulary.project_track_type.yml
@@ -4,6 +4,6 @@ status: true
 dependencies: {  }
 name: 'Project track type'
 vid: project_track_type
-description: null
+description: 'Project tracks are used to group tools to represent a unified evaluation of part of a project'
 weight: 0
 new_revision: false
