--- a/config/sync/views.view.projects.yml
+++ b/config/sync/views.view.projects.yml
@@ -389,7 +389,7 @@ display:
           click_sort_column: value
           type: string
           settings:
-            link_to_entity: false
+            link_to_entity: true
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -433,21 +433,29 @@ display:
           text_input_required_format: simple_editor
           bef:
             general:
-              autosubmit: true
+              autosubmit: false
               autosubmit_exclude_textfield: false
               autosubmit_textfield_delay: 500
               autosubmit_textfield_minimum_length: 3
-              autosubmit_hide: true
+              autosubmit_hide: false
               input_required: false
               allow_secondary: false
               secondary_label: 'Avancerede indstillinger'
               secondary_open: false
               reset_button_always_show: false
             filter:
-              uid:
+              combine:
                 plugin_id: default
                 advanced:
                   placeholder_text: ''
+                  collapsible: false
+                  collapsible_disable_automatic_open: false
+                  is_secondary: false
+                  hide_label: false
+              field_department_target_id:
+                plugin_id: default
+                advanced:
+                  sort_options: false
                   rewrite:
                     filter_rewrite_values: ''
                     filter_rewrite_values_key: false
