Changed submission theme

--- a/web/modules/custom/ai_screening_project_track/ai_screening_project_track.services.yml
+++ b/web/modules/custom/ai_screening_project_track/ai_screening_project_track.services.yml
@@ -16,3 +16,7 @@ services:
       $logger: '@logger.channel.ai_screening_project_track'
     tags:
       - { name: event_subscriber }
+
+  Drupal\ai_screening_project_track\Theme\ThemeNegotiator:
+    tags:
+      - { name: theme_negotiator, priority: 1000 }
