3071: Added validation of configuration and webform elements

--- a/web/modules/custom/ai_screening_project_track/ai_screening_project_track.services.yml
+++ b/web/modules/custom/ai_screening_project_track/ai_screening_project_track.services.yml
@@ -16,3 +16,11 @@ services:
       $logger: '@logger.channel.ai_screening_project_track'
     tags:
       - { name: event_subscriber }
+
+  Drupal\ai_screening_project_track\Helper\FormHelper:
+    autowire: true
+
+  Drupal\ai_screening_project_track\Helper\ProjectTrackTypeHelper:
+    autowire: true
+    tags:
+      - { name: event_subscriber }
