--- a/config/sync/field.field.taxonomy_term.project_track_type.field_configuration.yml
+++ b/config/sync/field.field.taxonomy_term.project_track_type.field_configuration.yml
@@ -10,7 +10,7 @@ field_name: field_configuration
 entity_type: taxonomy_term
 bundle: project_track_type
 label: Configuration
-description: "Configuration for tracks created from the term. Must be a valid <a href=\"https://en.wikipedia.org/wiki/YAML\">YAML</a> structure with a <code>dimensions</code> key, e.g.\r\n\r\n<pre><code>\r\ndimensions:\r\n  x: Usikkerhed \r\n  y: Nyttighed\r\n</code></pre>"
+description: "Configuration for tracks created from the term. Must be a valid <a href=\"https://en.wikipedia.org/wiki/YAML\">YAML</a> structure with a <code>dimensions</code> key, e.g.\r\n\r\n<pre><code>\r\ndimensions:\r\n  - Usikkerhed \r\n  - Nyttighed\r\n</code></pre>"
 required: true
 translatable: false
 default_value:
