--- a/docker-compose.server.override.yml
+++ b/docker-compose.server.override.yml
@@ -7,6 +7,7 @@ networks:
 
 services:
   phpfpm:
+    image: itkdev/php8.4-fpm:alpine
     environment:
       - PHP_MEMORY_LIMIT=512M
       - PHP_POST_MAX_SIZE=8M
